fix mysterious unicode input error with accented char - removed all accents

--- a/biblio.bib
+++ b/biblio.bib
@@ -226,7 +226,7 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
 
 @article{carabarin2013chagas,
   title={Chagas disease (American trypanosomiasis) in {M}exico: an update},
-  author={Carabarin-Lima, Alejandro and Gonz{\'a}lez-V{\'a}zquez, Mar{\'\i}a Cristina and Rodr{\'\i}guez-Morales, Olivia and Bayl{\'o}n-Pacheco, Lidia and Rosales-Encina, Jos{\'e} Luis and Reyes-L{\'o}pez, Pedro Antonio and Arce-Fonseca, Minerva},
+  author={Carabarin-Lima, Alejandro and Gonz{a}lez-V{a}zquez, Mar{i}a Cristina and Rodr{i}guez-Morales, Olivia and Bayl{o}n-Pacheco, Lidia and Rosales-Encina, Jos{e} Luis and Reyes-L{o}pez, Pedro Antonio and Arce-Fonseca, Minerva},
   journal={Acta tropica},
   volume={127},
   number={2},
@@ -239,7 +239,7 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
 @article{dumonteil1999update,
   title={Update on {C}hagas' disease in {M}exico},
   author={Dumonteil, Eric},
-  journal={Salud p{\'u}blica de M{\'e}xico},
+  journal={Salud p{u}blica de M{e}xico},
   volume={41},
   number={4},
   pages={322--327},
@@ -250,7 +250,7 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
 
 @article{guzman2001epidemiology,
   title={Epidemiology of {C}hagas disease in {M}exico: an update},
-  author={Guzm{\'a}n-Bracho, Carmen},
+  author={Guzm{a}n-Bracho, Carmen},
   journal={TRENDS in Parasitology},
   volume={17},
   number={8},
@@ -271,7 +271,7 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
 
 @article{manne2013barriers,
   title={Barriers to treatment access for {C}hagas disease in {M}exico},
-  author={Manne, Jennifer M and Snively, Callae S and Ramsey, Janine M and Salgado, Marco Ocampo and B{\"a}rnighausen, Till and Reich, Michael R},
+  author={Manne, Jennifer M and Snively, Callae S and Ramsey, Janine M and Salgado, Marco Ocampo and B{a}rnighausen, Till and Reich, Michael R},
   journal={PLoS Negl Trop Dis},
   volume={7},
   number={10},
@@ -306,7 +306,7 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
 
 @article{navarro2012chagas,
   title={Chagas disease in Spain: need for further public health measures},
-  author={Navarro, Miriam and Navaza, B{\'a}rbara and Guionnet, Anne and L{\'o}pez-V{\'e}lez, Rogelio},
+  author={Navarro, Miriam and Navaza, B{a}rbara and Guionnet, Anne and L{o}pez-V{e}lez, Rogelio},
   journal={PLoS Negl Trop Dis},
   volume={6},
   number={12},
@@ -319,7 +319,7 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
 
 @article{wesolowski2015impact,
   title={Impact of human mobility on the emergence of dengue epidemics in {P}akistan},
-  author={Wesolowski, Amy and Qureshi, Taimur and Boni, Maciej F and Sunds{\o}y, P{\aa}l Roe and Johansson, Michael A and Rasheed, Syed Basit and Eng{\o}-Monsen, Kenth and Buckee, Caroline O},
+  author={Wesolowski, Amy and Qureshi, Taimur and Boni, Maciej F and Sunds{o}y, P{aa}l Roe and Johansson, Michael A and Rasheed, Syed Basit and Eng{o}-Monsen, Kenth and Buckee, Caroline O},
   journal={Proceedings of the National Academy of Sciences},
   volume={112},
   number={38},
@@ -330,7 +330,7 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
 
 @article{csaji2012exploring,
   title={Exploring the mobility of mobile phone users},
-  author={Cs{\'a}ji, Bal{\'a}zs Cs and Browet, Arnaud and Traag, VA and Delvenne, Jean-Charles and Huens, Etienne and Van Dooren, Paul and Smoreda, Zbigniew and Blondel, Vincent D},
+  author={Cs{a}ji, Bal{a}zs Cs and Browet, Arnaud and Traag, VA and Delvenne, Jean-Charles and Huens, Etienne and Van Dooren, Paul and Smoreda, Zbigniew and Blondel, Vincent D},
   journal={Physica A: Statistical Mechanics and its Applications},
   year={2012},
   publisher={Elsevier}
@@ -338,8 +338,8 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
 
 @article{briceno2009chagas,
   title = {{Chagas disease in the Americas: an ecohealth perspective}},
-  author = {Brice{\~n}o-Le{\'o}n, Roberto},
-  journal = {Cadernos de Sa{\'u}de P{\'u}blica},
+  author = {Brice{\~n}o-Le{o}n, Roberto},
+  journal = {Cadernos de Sa{u}de P{u}blica},
   volume = {25},
   pages = {S71--S82},
   year = {2009},
@@ -377,7 +377,7 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
 
 
 @article{OPS2014mapa,
-  title = {{Mapa de Transmisión vectorial del Mal de Chagas}},
+  title = {{Mapa de Transmision vectorial del Mal de Chagas}},
   author = {OPS},
   journal = {Organizacion Panamericana de la Salud},
   year = {2014},
@@ -389,7 +389,7 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
 
 @article{cruz2006chagmex,
   title={{Chagas disease in Mexico: an analysis of geographical distribution during the past 76 years-A review}},
-  author={Cruz-Reyes, A and Pickering-L{\'o}pez, Jos{\'e} M},
+  author={Cruz-Reyes, A and Pickering-L{o}pez, Jos{e} M},
   journal={Memorias do Instituto Oswaldo Cruz},
   volume={101},
   number={4},
@@ -404,7 +404,7 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
   title = {{Mobile traffic analysis: a survey}},
   author = {Naboulsi, Diala and Fiore, Marco and Ribot, Stephane and Stanica, Razvan},
   year = {2015},
-  school = {Universit{\'e} de Lyon; INRIA Grenoble-Rh{\^o}ne-Alpes; INSA Lyon; CNR-IEIIT},
+  school = {Universit{e} de Lyon; INRIA Grenoble-Rh{\^o}ne-Alpes; INSA Lyon; CNR-IEIIT},
 }
 
 
@@ -443,7 +443,7 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
 
 @article{tizzoni2014use,
   title = {{On the use of human mobility proxies for modeling epidemics}},
-  author = {Tizzoni, Michele and Bajardi, Paolo and Decuyper, Adeline and King, Guillaume Kon Kam and Schneider, Christian M and Blondel, Vincent and Smoreda, Zbigniew and Gonz{\'a}lez, Marta C and Colizza, Vittoria},
+  author = {Tizzoni, Michele and Bajardi, Paolo and Decuyper, Adeline and King, Guillaume Kon Kam and Schneider, Christian M and Blondel, Vincent and Smoreda, Zbigniew and Gonz{a}lez, Marta C and Colizza, Vittoria},
   journal = {PLoS Comput Biol},
   volume = {10},
   number = {7},
@@ -487,7 +487,7 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
 @inproceedings{deMonasterio-analyzingSpread,
   doi = {10.1109/asonam.2016.7752298},
   url = {https://doi.org/10.1109%2Fasonam.2016.7752298},
-  year = 2016,
+  year = {2016},
   month = {aug},
   publisher = {{IEEE}},
   author = {Juan de Monasterio and Alejo Salles and Carolina Lang and Diego Weinberg and Martin Minnoni and Matias Travizano and Carlos Sarraute},
